// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VTimePickerTitle.js should render component in 12hr 1`] = `

<div class="v-time-picker-title">
  <div class="v-time-picker-title__time">
    <div class="v-picker__title__btn">
      2
    </div>
    <span>
      :
    </span>
    <div class="v-picker__title__btn v-picker__title__btn--active">
      13
    </div>
  </div>
  <div class="v-time-picker-title__ampm">
    <div class="v-picker__title__btn">
      am
    </div>
    <div class="v-picker__title__btn v-picker__title__btn--active">
      pm
    </div>
  </div>
</div>

`;

exports[`VTimePickerTitle.js should render component in 24hr 1`] = `

<div class="v-time-picker-title">
  <div class="v-time-picker-title__time">
    <div class="v-picker__title__btn">
      14
    </div>
    <span>
      :
    </span>
    <div class="v-picker__title__btn v-picker__title__btn--active">
      13
    </div>
  </div>
</div>

`;

exports[`VTimePickerTitle.js should render component when selecting hour 1`] = `

<div class="v-time-picker-title">
  <div class="v-time-picker-title__time">
    <div class="v-picker__title__btn v-picker__title__btn--active">
      14
    </div>
    <span>
      :
    </span>
    <div class="v-picker__title__btn">
      13
    </div>
  </div>
</div>

`;
